@@ -2,6 +2,7 @@
 Version 3.1.3
 =============================================================
 
+    - Feature: [import] vat number registration on delivery and billing addresses
     - Bugfix: Recovery of all active shops when searching by token
     - Bugfix: Implementation of dynamic link in templates for JS and CSS scripts
 
